dp1-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: dp-1-web-svc
  # namespace: integration
spec:
  selector:
    app.kubernetes.io/instance: cp4i-dp-1
  ports:
    - name: dpconsole
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: calchttp
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: calchttps
      protocol: TCP
      port: 7043
      targetPort: 7043     
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dp1console
  # namespace: integration
spec:
  to:
    kind: Service
    name: dp-1-web-svc
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: passthrough
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: calc-http
  # namespace: integration
spec:
  to:
    kind: Service
    name: dp-1-web-svc
    weight: 100
  port:
    targetPort: 8081
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: calc-https
  # namespace: integration
spec:
  to:
    kind: Service
    name: dp-1-web-svc
    weight: 100
  port:
    targetPort: 7043
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
